manifests/bluegreen/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-bluegreen-active
spec:
  selector:
    app: demo-bluegreen        # controller adds rollouts-pod-template-hash: STABLE-HASH
  ports:
    - name: http
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: demo-bluegreen-preview
spec:
  selector:
    app: demo-bluegreen        # controller adds rollouts-pod-template-hash: PREVIEW-HASH
  ports:
    - name: http
      port: 80
      targetPort: 8080
