manifests/bluegreen/httproutes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-bluegreen
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - bluegreen.demo.local
  rules:
    - backendRefs:
        - name: demo-bluegreen-active
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: demo-bluegreen-preview
spec:
  parentRefs:
    - name: eg
      namespace: envoy-gateway-system
  hostnames:
    - preview.bluegreen.demo.local
  rules:
    - backendRefs:
        - name: demo-bluegreen-preview
          port: 80
